Fixed search so at only search contains groups are visible and also no results text is not showed

--- a/bundles/framework/hierarchical-layerlist/scss/style.scss
+++ b/bundles/framework/hierarchical-layerlist/scss/style.scss
@@ -12,6 +12,10 @@ $selectedLayersTabLabelWidth: 50px;
 }
 
 div.hierarchical-layerlist {
+    div.hierarchical-layerlist-search-noresults {
+        padding: 10px;
+    }
+
     div.layer-filter {
         margin: 10px;
         color: #949494;
